[project]
name = "comfyui-makeframe"
description = "Nodes:BreakFrames, GetKeyFrames, MakeGrid."
version = "1.0.0"
license = "LICENSE"
dependencies = ["opencv-python"]

[project.urls]
Repository = "https://github.com/LonicaMewinsky/ComfyUI-MakeFrame"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-MakeFrame"
Icon = ""
